snapshots/glitch_hunt_chrome_consistency__final_statusbar/xterm__160x40__linux.txt
 þ thegn v0.1.0 work                                               80% ·  17.7/94G ·   7% ·  37% ·  96°C ·  ↓  122K ↑   93K ·  100% · Fri Jul 10 · 22:41
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 HOME ▸ home   1                                                                                                     git  work  system
╭─ bwrap · home ──────────────────────────────────────────────────────────────────────────────────────────────────╮  —
│                                                                                                                 │ ────────────────────────────────────────────
│\[\][\[\]blake@ws-3:~]$\[\]                                                                                      │  1 changes                            clean
│                                                                                                                 │
│                                                                                                                 │   working tree clean
│                                                                                                                 │
│                                                                                                                 │  2 commits                                —
│                                                                                                                 │
│                                                                                                                 │  3 branches                               —
│                                                                                                                 │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  4 stash                                  —
╭─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                                 │  5 files                              0 loc
│                                                                                                                 │
│                                                                                                                 │
│                                                                                                                 │
│                                                                                                                 │
│                                                                                                                 │
│                                                                                                                 │
│                                                                                                                 │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
TOML parse error at line 48, column 11
   |
48 | updated = { fg = "{{ACCENT}}" }
   |           ^^^^^^^^^^^^^^^^^^^^^
data did not match any variant of untagged enum CustomField

Press <Enter> to continue with preset settings...
^@^[






0 LOC │ ⚠ Sandbox fallback: sandbox podman-rootless failed: could not start podman container 'thegn-tmp-nix-shell-vs3ky0-tmp-zu7wj68mep-home'; sandbox podman-r…